// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExitComp should render 1`] = `
<div
  className="exit plumb-exit"
>
  <div
    className="name"
  >
    Red
  </div>
  <div
    className="endpoint  jtk-connected"
    id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
  <Counter
    containerStyle="activity"
    count={1000}
    countStyle="count"
    keepVisible={false}
    key="count:b1f332f3-bdd3-4891-aec5-1843a712dbf1:061fc171-8b79-4636-b892-bd0ea5aa9b42"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
</div>
`;

exports[`ExitComp shows localization 1`] = `
<div
  className="exit plumb-exit translating"
>
  <div
    className="name"
  >
    Hola!
  </div>
  <div
    className="endpoint  jtk-connected"
    id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
  <Counter
    containerStyle="activity"
    count={1000}
    countStyle="count"
    keepVisible={false}
    key="count:b1f332f3-bdd3-4891-aec5-1843a712dbf1:061fc171-8b79-4636-b892-bd0ea5aa9b42"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
</div>
`;

exports[`ExitComp shows missing localization 1`] = `
<div
  className="exit plumb-exit translating missing_localization"
>
  <div
    className="name"
  >
    Red
  </div>
  <div
    className="endpoint  jtk-connected"
    id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
  <Counter
    containerStyle="activity"
    count={1000}
    countStyle="count"
    keepVisible={false}
    key="count:b1f332f3-bdd3-4891-aec5-1843a712dbf1:061fc171-8b79-4636-b892-bd0ea5aa9b42"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
</div>
`;

exports[`ExitComp shows recent messages 1`] = `
<div
  className="exit plumb-exit"
>
  <div
    className="name"
  >
    Red
  </div>
  <div
    className="endpoint  jtk-connected"
    id="763e4844-3e1b-407a-a1b5-5fdfcd308b41:b1f332f3-bdd3-4891-aec5-1843a712dbf1"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
  <Counter
    containerStyle="activity"
    count={1000}
    countStyle="count"
    keepVisible={false}
    key="count:b1f332f3-bdd3-4891-aec5-1843a712dbf1:061fc171-8b79-4636-b892-bd0ea5aa9b42"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
  <div
    className="recent_messages"
  >
    <div
      className="title"
    >
      Recent Messages
    </div>
    <div
      className="message"
      key="recent_0"
    >
      <div
        className="text"
      >
        Hi Mom!
      </div>
      <div
        className="sent"
      >
        Apr 1, 2019
      </div>
    </div>
    <div
      className="message"
      key="recent_1"
    >
      <div
        className="text"
      >
        Hi Dad!
      </div>
      <div
        className="sent"
      >
        Apr 2, 2019
      </div>
    </div>
  </div>
</div>
`;
